2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/downloader-view.c:

	Fix status icon reference count.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:

	Make sure we don't show "100%" on downloads unless they're really
	completed.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_get_bus):
	* src/ephy-net-monitor.c:
	(ephy_net_monitor_check_for_active_device),
	(ephy_net_monitor_attach_to_dbus), (ephy_net_monitor_startup):

	Don't crash when we cannot connect to the system dbus. Bug #336557.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_help_with_doc_id), (ephy_gui_help):
	* lib/ephy-gui.h:

	Add ephy_guid_help_with_doc_id for use by e-e.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-notifiers.cpp:

	Oops, this is a string pref!

2006-04-01  Christian Persch  <chpe@cvs.gnome.org>

        * embed/mozilla/EphyPromptService.cpp:

	Fix crash when cancelling the prompt before the timeout has run.

2006-03-28  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:
	* lib/egg/egg-editable-toolbar.c: (egg_editable_toolbar_set_fixed):
	* lib/widgets/ephy-location-entry.c: (ephy_location_entry_init):
	* lib/widgets/ephy-zoom-control.c: (ephy_zoom_control_init):
	* src/ephy-fullscreen-popup.c: (ephy_fullscreen_popup_constructor):
	* src/ephy-notebook.c: (ephy_notebook_init):
	* src/ephy-statusbar.c: (ephy_statusbar_init):

	Use g_object_ref_sink().

2006-03-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyContentPolicy.cpp: (ShouldLoad).

	Mozilla backend now supports adblock.
	Fix #335919.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-node.c: (write_parent), (ephy_node_write_to_xml):

	Fix print format/arg mismatch.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/ephy-main.c: (main):

	Drop compat code for libgnome < 2.14.