@@ -1,5 +1,12 @@
 2006-04-03  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/bookmarks/ephy-bookmarks-editor.c:
+	(ephy_bookmarks_editor_construct):
+
+	Disable export when locked down. Bug #337028.
+
+2006-04-03  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/downloader-view.c:
 
 	Fix status icon reference count.
